Implemented cluster start for testing